hard-gists/b0a882f844e188c78358/run.log
=== Docker Run Log for b0a882f844e188c78358 ===
Started at: Mi 29. Okt 19:23:29 CET 2025

[2025-10-29 19:23:30] START: Running container for b0a882f844e188c78358
[2025-10-29 19:23:30] SUCCESS: Container 30a28e42aabbf60ba5d264a9f3db461711fcfe289f3cfd5a48a96e429ed4839a started for b0a882f844e188c78358
=== Container logs for b0a882f844e188c78358 ===
  File "/snippet.py", line 65
    print "Connection timed out ("+command+"). Reconnecting..." ### If MySQL went away, reconnect
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for b0a882f844e188c78358 ===
[2025-10-29 19:23:32] INFO: Container 30a28e42aabbf60ba5d264a9f3db461711fcfe289f3cfd5a48a96e429ed4839a has stopped
